# trunks

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  REVIEW.md
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: attack.rs  encode.rs  main.rs  plot.rs  report.rs
lib/: Cargo.toml
lib/src/: attack.rs  hit.rs  lib.rs  lttb.rs  metrics.rs  pacer.rs  plot.rs  prometheus.rs  proxy.rs  reporters.rs  resolver.rs  target.rs  unix.rs
