[workspace]
resolver = "2"
members = ["cli", "lib"]

[workspace.package]
authors       = ["Tomás Senart <tsenart@gmail.com>"]
edition       = "2021"
license       = "Apache-2.0"
homepage      = "https://github.com/tsenart/trunks"
repository    = "https://github.com/tsenart/trunks"
rust-version  = "1.70"
publish       = false

[workspace.dependencies]
async-channel      = { version = "1.8",  default-features = false }
async-trait        = { version = "0.1",  default-features = false }
base64-simd        = { version = "0.8",  default-features = false }
clap               = { version = "4.3",  default-features = false }
csv                = { version = "1.2",  default-features = false }
duration-string    = { version = "0.3",  default-features = false }
humantime-serde    = { version = "1.1",  default-features = false }
hyper              = { version = "0.14", default-features = false }
hyper-rustls       = { version = "0.24", default-features = false }
eyre               = { version = "0.6",  default-features = false }
futures            = { version = "0.3",  default-features = false }
serde              = { version = "1.0",  default-features = false }
serde_json         = { version = "1.0",  default-features = false }
thiserror          = { version = "1.0",  default-features = false }
tokio              = { version = "1.28", default-features = false }
tokio-util         = { version = "0.7",  default-features = false }
url                = { version = "2.4",  default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
