[package]
name                   = "trunks-cli"
version                = "0.1.2"
authors.workspace      = true
readme                 = "../README.md"
edition.workspace      = true
repository.workspace   = true
homepage.workspace     = true
license.workspace      = true
rust-version.workspace = true
publish                = true
description            = "Son of Vegeta — HTTP load testing tool written in Rust"

[[bin]]
name = "trunks"
path = "src/main.rs"

[dependencies]
trunks = { path = "../lib", version = "0.1.2" }

async-trait      = { workspace = true }
clap             = { workspace = true, features = ["default", "derive", "env" ]}
duration-string  = { workspace = true }
eyre             = { workspace = true, features = ["default"]}
futures          = { workspace = true }
hyper            = { workspace = true, features = ["client", "http1", "http2", "runtime", "server", "stream", "tcp"]}
hyper-rustls     = { workspace = true, features = ["http1", "http2", "logging", "native-tokio", "tls12"]}
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["fs", "io-util", "io-std", "signal", "macros", "rt-multi-thread"]}
tokio-util       = { workspace = true }
num_cpus         = { workspace = true }
rustls           = { version = "0.21", default-features = false, features = ["dangerous_configuration"] }
rustls-native-certs = { workspace = true }
rustls-pemfile   = { workspace = true }
