[package]
name                   = "trunks"
version                = "0.1.0"
authors.workspace      = true
edition.workspace      = true
repository.workspace   = true
homepage.workspace     = true
license.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[dependencies]
async-channel      = { workspace = true }
async-trait        = { workspace = true }
csv                = { workspace = true }
eyre               = { workspace = true }
futures            = { workspace = true, features = ["std"] }
reqwest            = { workspace = true, features = ["rustls", "cookies", "gzip", "brotli", "deflate", "json", "multipart", "stream"] }
serde              = { workspace = true, features = ["serde_derive"]}
serde_json         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"]}
tokio-util         = { workspace = true, features = []}
url                = { workspace = true }
