[package]
name                   = "trunks"
version                = "0.1.0"
authors.workspace      = true
edition.workspace      = true
repository.workspace   = true
homepage.workspace     = true
license.workspace      = true
rust-version.workspace = true
publish.workspace      = true

[dependencies]
async-channel      = { workspace = true }
async-trait        = { workspace = true }
base64-simd        = { workspace = true, features = ["alloc", "detect"]}
csv                = { workspace = true }
eyre               = { workspace = true }
humantime-serde    = { workspace = true }
futures            = { workspace = true, features = ["std"] }
hyper              = { workspace = true, features = ["client", "http1", "http2", "runtime", "stream"]}
hyper-rustls       = { workspace = true, features = ["http1", "http2", "logging", "native-tokio", "tls12"]}
serde              = { workspace = true, features = ["serde_derive"]}
serde_json         = { workspace = true, features = ["std"]}
thiserror          = { workspace = true }
tokio              = { workspace = true, features = ["full"]}
tokio-util         = { workspace = true, features = []}
url                = { workspace = true }
num_cpus           = { workspace = true }
